# flassger-api

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
src/: config.py  routes.py
tests/: test_routes.py
