[tool.poetry]
name = "flasgger-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flasgger_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flasgger = "^0.9.5"
pytest = "^7.1.3"
pytest-sugar = "^0.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
